// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton > SHOULD match snapshot & render correctly with children 1`] = `
<div>
  <span
    class="css-sxqtuu"
    data-testid="Skeleton"
  >
    Custom text
  </span>
</div>
`;

exports[`Skeleton > SHOULD match snapshot 1`] = `
<div>
  <span
    class="skeleton-custom-class css-sxqtuu"
    data-testid="Skeleton"
  />
</div>
`;
